--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,14 @@ __pycache__/
 # C extensions
 *.so
 
+medgen_cred.pem
+
+# SQL backup files
+*.sql
+*.sql.bak
+*.sql.gz
+*.sql.zip
+
 # Distribution / packaging
 .Python
 build/
