--- a/requirements.txt
+++ b/requirements.txt
@@ -1,110 +1,132 @@
 absl-py==2.1.0
 agora_token_builder==1.0.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.16
+aiohttp-retry==2.9.1
+aiosignal==1.3.2
+anyio==4.9.0
 asgiref==3.8.1
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1733250440834/work
+asttokens==2.4.1
 astunparse==1.6.3
 attrs==25.1.0
 autobahn==24.4.2
 Automat==24.8.1
+awscli==1.38.28
+boto3==1.37.27
+botocore==1.37.28
 certifi==2024.12.14
 cffi==1.17.1
 channels==4.2.0
 channels_redis==4.2.1
 charset-normalizer==3.4.1
-colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1733218098505/work
-comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1733502965406/work
+colorama==0.4.6
+comm==0.2.1
 constantly==23.10.4
 cramjam==2.8.4
 cryptography==44.0.0
 daphne==4.1.2
-debugpy @ file:///C:/b/abs_bf9oo2vhxp/croot/debugpy_1736269476451/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1733236420667/work
+debugpy==1.8.1
+decorator==5.1.1
 distlib==0.3.8
 Django==5.1.1
 django-browser-reload==1.15.0
 django-otp==1.5.4
+django-storages==1.14.6
 dnspython==2.6.1
-exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1733208806608/work
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1733569351617/work
+docutils==0.16
+exceptiongroup==1.2.1
+executing==2.0.1
 filelock==3.16.1
 flatbuffers==24.12.23
+frozenlist==1.5.0
 fsspec==2024.12.0
 gast==0.6.0
 google-pasta==0.2.0
 grpcio==1.69.0
+h11==0.14.0
 h5py==3.12.1
+httpcore==1.0.7
+httpx==0.28.1
 huggingface-hub==0.27.1
 hyperlink==21.0.0
 idna==3.10
-importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1733223117029/work
+importlib_metadata==7.1.0
 incremental==24.7.2
-ipykernel @ file:///D:/bld/ipykernel_1719845595208/work
-ipython @ file:///D:/bld/ipython_1734788189411/work
-ipywidgets @ file:///home/conda/feedstock_root/build_artifacts/ipywidgets_1733493556527/work
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1733300866624/work
+ipykernel==6.29.4
+ipython==8.24.0
+ipywidgets==8.1.2
+jedi==0.19.1
 Jinja2==3.1.5
+jmespath==1.0.1
 joblib==1.4.2
-jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1733440914442/work
-jupyter_core @ file:///C:/b/abs_beftpbuevw/croot/jupyter_core_1718818307097/work
-jupyterlab_widgets @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_widgets_1733428046021/work
+jupyter_client==9.0.1
+jupyter_core==5.7.2
+jupyterlab_widgets==3.0.10
 keras==3.8.0
 libclang==18.1.1
 Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1733416936468/work
+matplotlib-inline==0.1.7
 mdurl==0.1.2
 ml-dtypes==0.4.1
 mpmath==1.3.0
 msgpack==1.1.0
+multidict==6.3.2
 namex==0.0.8
 ndg-httpsclient==0.5.1
-nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1733325553580/work
+nest_asyncio==1.6.0
 networkx==3.4.2
 numpy==1.26.4
 opt_einsum==3.4.0
 optree==0.14.0
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1733203243479/work
+packaging==24.0
 pandas==2.2.3
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1733271261340/work
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1733327343728/work
+parso==0.8.4
+pickleshare==0.7.5
 pillow==10.4.0
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1733232627818/work
-prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1733302527033/work
+platformdirs==4.2.1
+prompt_toolkit==3.0.45
+propcache==0.3.1
 protobuf==5.29.3
-psutil @ file:///C:/b/abs_b5gv3mn55h/croot/psutil_1736371546320/work
+psutil==5.9.8
 psycopg2==2.9.10
 psycopg2-binary==2.9.10
-pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1733569405015/work
+pure_eval==0.2.2
 pusher==3.3.3
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1736243443484/work
+Pygments==2.18.0
+PyJWT==2.10.1
 pymongo==4.9.1
 PyNaCl==1.5.0
 pyOpenSSL==25.0.0
 pyotp==2.9.0
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1733215673016/work
+python-dateutil==2.9.0
 python-decouple==3.8
 python-dotenv==1.0.1
 python-snappy==0.7.3
+python-telegram-bot==22.0
 pytz==2024.2
 pywin32==308
 PyYAML==6.0.2
-pyzmq @ file:///C:/b/abs_f3yte6j5yn/croot/pyzmq_1734711069724/work
+pyzmq==26.0.2
 redis==5.2.1
 regex==2024.11.6
 requests==2.32.3
 rich==13.9.4
+rsa==4.7.2
+s3transfer==0.11.4
 safetensors==0.5.2
 scikit-learn==1.3.2
 scipy==1.14.1
 service-identity==24.2.0
 setuptools==75.1.0
 six==1.16.0
+sniffio==1.3.1
 sqlparse==0.5.1
-stack_data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1733569443808/work
+stack_data==0.6.3
 sympy==1.13.1
 tensorboard==2.18.0
 tensorboard-data-server==0.7.2
@@ -116,22 +138,24 @@ tokenizers==0.21.0
 torch==2.5.1
 torchaudio==2.5.1
 torchvision==0.20.1
-tornado @ file:///C:/b/abs_7cyu943ybx/croot/tornado_1733960510898/work
+tornado==6.4
 tqdm==4.67.1
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1733367359838/work
+traitlets==5.14.2
 transformers==4.48.0
+twilio==9.5.2
 Twisted==24.11.0
 txaio==23.1.1
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1733188668063/work
+typing_extensions==4.11.0
 tzdata==2024.2
 urllib3==2.3.0
 virtualenv==20.26.5
 virtualenvwrapper-win==1.2.7
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1733231326287/work
+wcwidth==0.2.13
 Werkzeug==3.1.3
 wheel==0.44.0
-widgetsnbextension @ file:///home/conda/feedstock_root/build_artifacts/widgetsnbextension_1733128559935/work
+widgetsnbextension==4.0.10
 winkerberos==0.12.0
 wrapt==1.17.2
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1732827521216/work
+yarl==1.19.0
+zipp==3.18.1
 zope.interface==7.2
