--- a/requirements.txt
+++ b/requirements.txt
@@ -59,9 +59,9 @@ jedi==0.19.1
 Jinja2==3.1.5
 jmespath==1.0.1
 joblib==1.4.2
-jupyter_client==9.0.1
-jupyter_core==5.7.2
-jupyterlab_widgets==3.0.10
+# jupyter_client==9.0.1
+# jupyter_core==5.7.2
+# jupyterlab_widgets==3.0.10
 keras==3.8.0
 libclang==18.1.1
 Markdown==3.7
