--- a/requirements.txt
+++ b/requirements.txt
@@ -1,154 +1,40 @@
-absl-py==2.1.0
-agora_token_builder==1.0.0
-aiohappyeyeballs==2.6.1
-aiohttp==3.9.5
-aiohttp-retry==2.9.1
-aiosignal==1.3.1
-anyio==4.3.0
-asgiref==3.8.1
-asttokens==2.4.1
-astunparse==1.6.3
-attrs==23.2.0
-autobahn==24.4.2
-Automat==24.8.1
-awscli==1.38.28
-boto3==1.34.27
-botocore==1.34.28
-certifi==2024.2.2
-cffi==1.17.1
-channels==4.0.0
-channels_redis==4.1.0
-charset-normalizer==3.3.2
-colorama==0.4.6
-comm==0.2.1
-constantly==23.10.4
-cramjam==2.8.4
-cryptography==42.0.5
-daphne==4.1.2
-debugpy==1.8.1
-decorator==5.1.1
-distlib==0.3.8
+# Django and Django-related packages
 Django==5.1.1
 django-browser-reload==1.15.0
 django-otp==1.5.4
 django-storages==1.14.6
-dnspython==2.6.1
-docutils==0.20.1
-exceptiongroup==1.2.1
-executing==2.0.1
-filelock==3.13.1
-flatbuffers==24.3.25
-frozenlist==1.4.1
-fsspec==2024.3.1
-gast==0.6.0
-google-pasta==0.2.0
-grpcio==1.62.1
-h11==0.14.0
-h5py==3.10.0
-httpcore==1.0.4
-httpx==0.27.0
-huggingface-hub==0.22.2
-hyperlink==21.0.0
-idna==3.6
-importlib_metadata==7.1.0
-incremental==22.10.0
-ipykernel==6.29.4
-ipython==8.22.2
-ipywidgets==8.1.2
-jedi==0.19.1
-Jinja2==3.1.3
-jmespath==1.0.1
-joblib==1.4.2
-keras==3.2.1
-libclang==18.1.1
-Markdown==3.6
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-ml-dtypes==0.3.2
-mpmath==1.3.0
-msgpack==1.0.8
-multidict==6.0.5
-namex==0.0.8
-ndg-httpsclient==0.5.1
-nest_asyncio==1.6.0
-networkx==3.3
-numpy==1.26.4
-opt_einsum==3.3.0
-optree==0.10.0
-packaging==24.0
-pandas==2.2.1
-parso==0.8.4
-pickleshare==0.7.5
-pillow==10.2.0
-platformdirs==4.2.0
-prompt_toolkit==3.0.43
-propcache==0.3.1
-protobuf==4.25.3
-psutil==5.9.8
-psycopg2==2.9.9
-psycopg2-binary==2.9.9
-pure_eval==0.2.2
-pusher==3.3.3
-pyasn1==0.6.0
-pyasn1_modules==0.4.0
-pycparser==2.21
-Pygments==2.17.2
-PyJWT==2.8.0
-pymongo==4.6.2
-PyNaCl==1.5.0
-pyOpenSSL==24.1.0
-pyotp==2.9.0
-python-dateutil==2.9.0.post0
-python-decouple==3.8
-python-dotenv==1.1.0
-python-snappy==0.7.3
-python-telegram-bot==22.0
-pytz==2024.2
-PyYAML==6.0.1
-pyzmq==25.1.2
+channels==4.2.0
+channels_redis==4.2.1
+daphne==4.1.2
 
-requests==2.31.0
-rich==13.7.1
-rsa==4.9
-s3transfer==0.10.0
-safetensors==0.4.2
-scikit-learn==1.4.1.post1
-scipy==1.13.0
-service-identity==21.1.0
-setuptools==69.2.0
+# Database
+psycopg2==2.9.10
+redis==5.2.1
+
+# AWS
+boto3==1.37.27
+awscli==1.38.28
+
+# Authentication and Security
+python-decouple==3.8
+python-dotenv==1.0.1
+PyJWT==2.10.1
+cryptography==44.0.0
+
+# Image Processing
+Pillow==10.4.0
+
+# HTTP and API
+requests==2.32.3
+aiohttp==3.11.16
+httpx==0.28.1
+
+# Utilities
+python-dateutil==2.9.0
+pytz==2024.2
 six==1.16.0
-sniffio==1.3.0
-sqlparse==0.5.0
-stack_data==0.6.2
-sympy==1.12
-tensorboard==2.16.2
-tensorboard-data-server==0.7.2
-tensorflow==2.16.1
-termcolor==2.4.0
-threadpoolctl==3.4.0
-tokenizers==0.19.1
-torch==2.2.1
-torchaudio==2.2.1
-torchvision==0.17.1
-tornado==6.3.3
-tqdm==4.66.2
-traitlets==5.14.1
-transformers==4.38.2
-twilio==9.3.0
-Twisted==22.10.0
-txaio==22.2.1
-typing_extensions==4.10.0
-tzdata==2024.1
-urllib3==2.2.1
-virtualenv==20.25.1
-wcwidth==0.2.13
-Werkzeug==3.0.1
-wheel==0.42.0
-widgetsnbextension==4.0.10
-winkerberos==0.12.0
-wrapt==1.16.0
-yarl==1.9.4
-zipp==3.18.1
-zope.interface==6.3
+urllib3==2.3.0
+
+# WebSocket and Real-time
+autobahn==24.4.2
+Twisted==24.11.0
