--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,18 @@
 {
-    "version": 2,
     "builds": [
-      {
-        "src": "medigen_main/wsgi.py",
-        "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.12.5" }
-      },
-      {
-        "src": "build_files.sh",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "staticfiles_build"
+        {
+            "src": "medigen_main/wsgi.py",
+            "use": "@vercel/python",
+            "config": { "runtime": "python3.12" }
+        },
+        {
+            "src": "build_files.sh",
+            "use": "@vercel/static-build",
+            "config": { "distDir": "staticfiles" }
         }
-      }
     ],
     "routes": [
-      {
-        "src": "/static/(.*)",
-        "dest": "/static/$1"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "medigen_main/wsgi.py"
-      }
+        { "src": "/static/(.*)", "dest": "/static/$1" },
+        { "src": "/(.*)", "dest": "medigen_main/wsgi.py" }
     ]
-  }
+}
